# grafana-dashboard-generator

./: .gitignore  README.md  projectPrompt.txt
backend/: README.md  pyproject.toml  run_api.py  test_debug.py
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py  dashboard_agent.py
backend/app/rag/: __init__.py  retriever.py
backend/app/routes/: dashboard.py
backend/app/schemas/: __init__.py  dashboard.py  grafana_schema.py  models.py
backend/app/utils/: llm.py  task_store.py
frontend/: README.md  package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/adapters/api/: dashboardApi.ts
frontend/app/components/: DashboardGeneratorForm.tsx  DashboardResult.tsx
frontend/app/domain/services/: dashboardService.ts
frontend/app/hooks/: useDashboardModels.ts
frontend/app/types/: dashboard.ts
frontend/app/ui/features/: DashboardGenerator.tsx
